overflow hinden fixe

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ html, body {
 //     overflow-x: hidden;
 // }
 body { 
-    overflow-x: hidden;
+    // overflow-x: hidden;
     // font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
 
